[package]
name = "get-img-pixel"
version = "0.0.1"
authors = ["aloithor <1516544795@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "*" }
wasm-bindgen-futures = "0.4.37"
image = "0.25.0"
reqwest = "0.12.2"
serde = { version = "1.0.189", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
